syntax = "proto3";
option go_package = "github.com/twirapp/twir/libs/grpc/parser";
package parser;
import "google/protobuf/empty.proto";

service Parser {
  rpc ProcessCommand (ProcessCommandRequest) returns (ProcessCommandResponse) {}
  rpc ParseTextResponse (ParseTextRequestData) returns (ParseTextResponseData) {}
  rpc GetDefaultCommands (google.protobuf.Empty) returns (GetDefaultCommandsResponse) {}
  rpc GetDefaultVariables (google.protobuf.Empty) returns (GetVariablesResponse) {}
}

message Sender {
  string id = 1;
  string name = 2;
  string displayName = 3;
  repeated string badges = 4;
	string color = 5;
}

message Channel {
  string id = 1;
  string name = 2;
}

message Message {
  message EmotePosition {
    int64 start = 1;
    int64 end = 2;
  }

  message Emote {
    string name = 1;
    string id = 2;
    int64 count = 3;
    repeated EmotePosition positions = 4;
  }

	message Mention {
		string user_id = 1;
		string user_name = 2;
		string user_login = 3;
	}

  string text = 1;
  string id = 2;
  repeated Emote emotes = 3;
	repeated Mention mentions = 4;
}

message ProcessCommandRequest {
  Sender sender = 1;
  Channel channel = 2;
  Message message = 3;
}

message ProcessCommandResponse {
  repeated string responses = 1;
  bool isReply = 2;
  optional bool keepOrder = 3;
}

message GetVariablesResponse {
  message Variable {
    string name = 1;
    string example = 2;
    string description = 3;
    bool visible = 4;
		bool can_be_used_in_registry = 5;
  }
  repeated Variable list = 1;
}

message GetDefaultCommandsResponse {
  message DefaultCommand {
    string name = 1;
    string description = 2;
    bool visible = 3;
    repeated string rolesNames = 4;
    string module = 5;
    bool isReply = 6;
    bool keepResponsesOrder = 7;
    repeated string aliases = 8;
  }
  repeated DefaultCommand list = 1;
}

message ParseTextRequestData {
  Sender sender = 1;
  Channel channel = 2;
  Message message = 3;
  optional bool parseVariables = 4;
}

message ParseTextResponseData {
  repeated string responses = 1;
}
